--- a/VintedProject/src/app/Components/main-nav/main-nav.component.html
+++ b/VintedProject/src/app/Components/main-nav/main-nav.component.html
@@ -65,18 +65,19 @@
       </mat-card>
     </div>
 </div>
+<div class="insertion-container" >    
+  <app-product-card ></app-product-card>
+  <app-product-card ></app-product-card>
+  <app-product-card ></app-product-card>
+  <app-product-card ></app-product-card>
+  <app-product-card ></app-product-card>
+  <app-product-card ></app-product-card>
+  <app-product-card ></app-product-card>
+  <app-product-card ></app-product-card>
+  <app-product-card ></app-product-card>
+  <app-product-card ></app-product-card>
 
-
-
-
-
-
-
-
-
-
-
-
+</div>
 
 
 
