--- a/VintedProject/src/app/Components/product-card/product-card.component.html
+++ b/VintedProject/src/app/Components/product-card/product-card.component.html
@@ -1,1 +1,13 @@
-<p>oyeah</p>
+<div>
+    <div>
+        <img src="assets/resources/vestito.jpg">
+    </div>
+    <div style="padding-left:2% ;">
+        <p>
+            Price: {{price}}€ <br>
+            Complete price: {{comletePrice}}€<br>
+            Size :{{size}}<br>
+            Brand: {{brand}}<br>
+        </p>
+    </div>
+</div>
