--- a/VintedProject/src/app/Components/insertion-page/insertion-page.component.html
+++ b/VintedProject/src/app/Components/insertion-page/insertion-page.component.html
@@ -1,34 +1,34 @@
 <div class="main-container">
     <div class="image-container">
-        <img src="assets/resources/vestito.jpg">
+      <img class="productImage" src="assets/resources/vestito.jpg">
     </div>
 
     <div class="info-container">
-        <div style="height: 20%;">
+        <div class="priceContainer">
             <p>
                 Prezzo: 5€ <br>
-                5,50€ include la Protezione acquisti 
+                5,50€ include la Protezione acquisti
             </p>
         </div>
-        <div style="height: 80%;">
-            <div style= "width: 50%;">
+        <div class="infoContainer">
+            <div style="width: 50%">
                 <p>
                     <strong>
                         BRAND <br>
                         TAGLIA <br>
                         CONDIZIONI <br>
                         COLORE <br>
-                    </strong>       
+                    </strong>
                 </p>
             </div>
-            <div style= "width: 50%;">
+            <div style="width: 50%">
                 <p>
                     <strong>
                         ZARA <br>
                         S <br>
                         NUOVO <br>
                         FATTI I CAZZI TUOI <br>
-                    </strong>  
+                    </strong>
                 </p>
             </div>
         </div>
