--- a/VintedProject/src/app/Components/product-card/product-card.component.html
+++ b/VintedProject/src/app/Components/product-card/product-card.component.html
@@ -1,6 +1,6 @@
 <div>
     <div>
-        <img src="assets/resources/vestito.jpg">
+        <img src="assets/resources/vestito.jpg" (click)="onImageClick()" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
     </div>
     <div style="padding-left:2% ;">
         <p>
