--- a/VintedProject/src/app/Components/main-nav/main-nav.component.css
+++ b/VintedProject/src/app/Components/main-nav/main-nav.component.css
@@ -34,10 +34,9 @@
 
 div#hormenu {
   width: 100%;
-  float: left;
   margin: 0;
   padding: 0;
-  border-top: 1px solid black;
+
 }
 
 div#hormenu ul{
@@ -47,11 +46,10 @@ div#hormenu ul{
 }
 
 div#hormenu li{
-  width:100px;
+
   float:left;
   margin: 0;
   padding: 0;
-  border-right: 1px solid black;
   color:black;
 }
 
@@ -76,7 +74,7 @@ div#hormenu li:hover ul{
   display: block;
   position: absolute;
   z-index:1;
-  width:150px;
+
   padding: 0;
   margin: 0 0 0 -1px;
   border:1px solid black;
@@ -91,3 +89,15 @@ div#hormenu li li {
 div#hormenu li li a {
   padding:2px 2px 2px 10px;
 }
+
+mat-raised-button{
+  margin-top: 5px
+}
+
+
+
+
+
+
+
+
