--- a/VintedProject/src/app/Components/main-nav/main-nav.component.html
+++ b/VintedProject/src/app/Components/main-nav/main-nav.component.html
@@ -1,44 +1,45 @@
 <div class="mainDiv">
   <span class="spacer"></span>
   <div class="titleDiv">
-    <p style="margin-top: 10px;">OCARINA SHOP</p>
+    <p style="margin-top: 10px; margin-right: 10px; margin-left: 10px">OCARINA SHOP</p>
   </div>
   <span class="spacer"></span>
-  <div style="height: auto;"> <!--div della ricerca categorie-->
-    <div id="hormenu"><!-- div che contiene il menu -->
-      <ul> <!-- lista principale: definisce il menu nella sua interezza -->
-        <li>
-        <button href="#" (click)="showCategories()">Categorie</button> <!-- primo list-item, prima voce del menu -->
-          <ul *ngIf="!hideMenu"> <!-- Lista annidata: voci del sotto-menu -->
-            <li><a href="#">Elettronica</a></li>
-            <li><a href="#">Collezioni</a></li>
-            <li><a href="#">Abbigliamento</a></li>
-            <li><a href="#">Barche</a></li>
-            <li><a href="#">Sport</a></li>
-          </ul> <!-- Fine del sotto-menu -->
-        </li> <!-- Chiudo il list-item -->
-      <!--qui altri list-item -->
-      </ul>
-    </div>
-  </div>
+      <div style="background-color: #c3d0cd; width: 100%; display: flex; flex-wrap: wrap;">
+        <div style="margin-top: 8px; margin-left: 10px; margin-right: 10px"> <!-- div della ricerca categorie -->
+          <div id="hormenu"><!-- div che contiene il menu -->
+            <ul> <!-- lista principale: definisce il menu nella sua interezza -->
+              <li>
+                <button mat-raised-button href="#" style="height: 55px" (click)="showMenu()" (mouseover)="showMenu()" >Categorie</button> <!-- primo list-item, prima voce del menu -->
+                <ul *ngIf="showSubMenu" style="width: 300px; background-color: white"> <!-- Lista annidata: voci del sotto-menu -->
+                  <li><a href="#">Elettronica</a></li>
+                  <li><a href="#">Collezioni</a></li>
+                  <li><a href="#">Abbigliamento</a></li>
+                  <li><a href="#">Barche</a></li>
+                  <li><a href="#">Sport</a></li>
+                </ul> <!-- Fine del sotto-menu -->
+              </li> <!-- Chiudo il list-item -->
+              <!--qui altri list-item -->
+            </ul>
+          </div>
+        </div>
 
-  <span class="spacer"></span>
+        <mat-form-field style="margin-top:8px; margin-right: 10px; flex-grow: 1; width: 50%;">
+          <input #searchkeyword matInput name="Ricerca" id="searchKey" placeholder="Ricerca prodotto">
+          <button mat-button matSuffix>
+            <mat-icon>search</mat-icon>
+          </button>
+        </mat-form-field>
+      </div>
+      <span style="margin: 7%"></span>
 
-  <div class="searchDiv"> <!--div barra di ricerca-->
-      <input matInput placeholder="search">
-        <button>
-          <mat-icon>search</mat-icon>
-        </button>
-  </div>
-
-  <span class="spacer"></span>
+      <span class="spacer"></span>
 
   <div style="display: flex; height: auto;"> <!--div bottoni iscrizione/accesso e inserisci inserzione-->
-    <button mat-raised-button style="background-color: lightblue;">Iscriviti/Accedi</button>
+    <button mat-raised-button style="background-color: lightblue;margin-top: 8px; margin-left: 10px; margin-right: 10px">Iscriviti/Accedi</button>
     <span style="flex: 1 1 auto;"></span>
-    <button mat-raised-button style="background-color: rgb(116, 116, 247);">Crea inserzione</button>
+    <button mat-raised-button style="background-color: rgb(116, 116, 247); margin-top: 8px; margin-left: 10px; margin-right: 10px">Crea inserzione</button>
     <span style="flex: 1 1 auto;"></span>
-    <mat-icon>help</mat-icon>
+    <mat-icon style="margin-top: 10px; margin-right: 20px">help</mat-icon>
   </div>
   <span class="spacer"></span>
 </div>
