--- a/VintedProject/src/app/Components/home-page/home-page.component.html
+++ b/VintedProject/src/app/Components/home-page/home-page.component.html
@@ -7,16 +7,8 @@
     </mat-card>
   </div>
 </div>
-<div class="insertion-container" >
-<app-product-card ></app-product-card>
-<app-product-card ></app-product-card>
-<app-product-card ></app-product-card>
-<app-product-card ></app-product-card>
-<app-product-card ></app-product-card>
-<app-product-card ></app-product-card>
-<app-product-card ></app-product-card>
-<app-product-card ></app-product-card>
-<app-product-card ></app-product-card>
-<app-product-card ></app-product-card>
-
+<<div class="insertion-container" *ngIf="insertion">
+  <div *ngFor="let item of insertion.content">
+    <app-product-card [item]="item"></app-product-card>
+  </div>
 </div>
