--- a/VintedProject/src/app/Components/product-card/product-card.component.html
+++ b/VintedProject/src/app/Components/product-card/product-card.component.html
@@ -1,13 +1,13 @@
 <div>
-    <div>
-        <img src="assets/resources/vestito.jpg" (click)="onImageClick()" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
+  <div>
+    <img src="assets/resources/vestito.jpg" (click)="onImageClick()" (mouseenter)="isHovered = true" (mouseleave)="isHovered = false">
+  </div>
+  <div style="padding-left: 2%;">
+    <div class="product-card">
+      <!-- Visualizza i dettagli del prodotto -->
+      <h2>{{ item?.title }}</h2>
+      <p>{{ item?.description }}</p>
+      <p>Prezzo: {{ item?.price }}</p>
     </div>
-    <div style="padding-left:2% ;">
-        <p>
-            Price: {{price}}€ <br>
-            Complete price: {{comletePrice}}€<br>
-            Size :{{size}}<br>
-            Brand: {{brand}}<br>
-        </p>
-    </div>
+  </div>
 </div>
