--- a/VintedProject/src/app/Components/home-page/home-page.component.html
+++ b/VintedProject/src/app/Components/home-page/home-page.component.html
@@ -7,8 +7,8 @@
     </mat-card>
   </div>
 </div>
-<<div class="insertion-container" *ngIf="insertion">
-  <div *ngFor="let item of insertion.content">
+<div class="insertion-container" *ngIf="insertion">
+  <div *ngFor="let item of insertion.content" style="max-width: 300px; margin-top: 20px">
     <app-product-card [item]="item"></app-product-card>
   </div>
 </div>
