--- a/VintedProject/src/app/Components/main-nav/main-nav.component.html
+++ b/VintedProject/src/app/Components/main-nav/main-nav.component.html
@@ -1,7 +1,9 @@
 <div class="mainDiv">
   <span class="spacer"></span>
   <div class="titleDiv">
-    <p style="margin-top: 10px; margin-right: 10px; margin-left: 10px">OCARINA SHOP</p>
+
+    <p routerLink="" style="cursor:pointer; margin-top: 10px; margin-right: 10px; margin-left: 10px;">OCARINA SHOP</p>
+
   </div>
   <span class="spacer"></span>
       <div style="background-color: #c3d0cd; width: 100%; display: flex; flex-wrap: wrap;">
