--- a/VintedProject/src/app/Components/product-card/product-card.component.html
+++ b/VintedProject/src/app/Components/product-card/product-card.component.html
@@ -6,7 +6,7 @@
     <div class="product-card">
       <!-- Visualizza i dettagli del prodotto -->
       <h2>{{ item?.title }}</h2>
-      <p>{{ item?.description }}</p>
+      <p style="max-width: 250px">{{ item?.description }}</p>
       <p>Prezzo: {{ item?.price }}</p>
     </div>
   </div>
