--- a/VintedProject/src/app/Components/search/search.component.html
+++ b/VintedProject/src/app/Components/search/search.component.html
@@ -1,16 +1,11 @@
 <div class="insertion-container" *ngIf="insertion">
   <div class="body-content" style="margin-top: 30px">
-    <div style="max-height: 700px;">
-      <div class="header">
-        <h2 class="font">Articoli più richiesti</h2>
-        <button class="showAll-button">Vedi tutti</button>
-      </div>
-      <div class="card-container">
-        <div class="card-row">
-          <div *ngFor="let item of insertion.content" class="card-item">
-            <app-product-card [item]="item"></app-product-card>
-          </div>
-        </div>
+    <div class="card-container">
+      <div class="card-row">
+        <ng-container *ngFor="let item of insertion?.content; let i = index;">
+          <app-product-card [item]="item" class="card-item"></app-product-card>
+          <ng-container *ngIf="(i + 1) % 6 === 0" class="clearfix"></ng-container>
+        </ng-container>
       </div>
     </div>
   </div>
