--- a/VintedProject/src/app/Components/insertion-page/insertion-page.component.css
+++ b/VintedProject/src/app/Components/insertion-page/insertion-page.component.css
@@ -1,32 +1,133 @@
-.main-container{
-  margin:50px;
-  display: flex;
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+
+
 }
 
-.image-container{
+body {
   display: flex;
-  width: 1000px;
-  max-height: 1000px;
-  justify-content: center; /* Centra orizzontalmente */
-  align-items: center; /* Centra verticalmente */
+  justify-content: center;
+  align-items: center;
 }
 
-.info-container{
-  margin:50px;
-  width: 30%;
+.main-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  margin: 50px;
+  margin-left: 300px;
+  margin-right: 300px;
+
+
+}
+
+.image-container {
+  min-width: 400px;
+  width: 80%;
+  margin-right: 25px;
+}
+
+.productImage {
+  max-width: 100%;
   height: auto;
+  cursor: pointer;
 }
 
-.productImage{
-  width: 50%;
-  height: auto;
+.info-container {
+  background-color: #D7D7D7;
+  min-width: 250px;
+  border-radius: 5px;
+  width: 15%;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-.priceContainer{
-  height: 25%;
-}
+.infoContainer {
 
-.infoContainer{
   display: flex;
-  height: 75%;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.priceContainer {
+  margin-top: 50px;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+}
+
+.btn {
+  background-color: #077782;
+  color: white;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.second-button {
+  background-color: #333;
+}
+
+.image-thumbnails {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.thumbnail {
+  width: 70px;
+  height: 70px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal img {
+  max-width: 80%;
+  max-height: 80%;
+}
+
+.modal .close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.userContainer{
+  width: 80%;
+  background-color: #D7D7D7;
+  display: flex;
+  margin:10%;
+  margin-top: 20px;
+  justify-content: center;
+  align-items: center;
+  height: 250px;
+
+  text-align: center; /* Centra il contenuto orizzontalmente */
 }
