--- a/VintedProject/src/app/Components/insertion-page/insertion-page.component.html
+++ b/VintedProject/src/app/Components/insertion-page/insertion-page.component.html
@@ -40,6 +40,19 @@
 <div class="userContainer">
   <div style="width: 100%;">
     <p>qui dentro vanno i post dell'utente</p>
+    <div class="card-container">
+      <div class="card-row">
+        <div *ngFor="let item of userOtherInsertion?.content" class="card-item">
+          <div class="user-insertion-card">
+            <div class="user-image-container">
+              <img class="user-image" [src]="user?.photo ||  'assets/resources/vestito.jpg' " alt="User Image">
+            </div>
+            <app-product-card [item]="item"></app-product-card>
+          </div>
+        </div>
+        <button type="button" class="btn btn-secondary" style="width: 300px; min-width: 200px"  [routerLink]="['/catalog']">Vedi tutti i prodotti</button>
+      </div>
+    </div>
   </div>
 </div>
 <div style="height: 20px"></div>
