--- a/VintedProject/src/app/Components/catalog/catalog.component.css
+++ b/VintedProject/src/app/Components/catalog/catalog.component.css
@@ -36,3 +36,37 @@
   clear: both;
 }
 
+
+.button {
+  background-color: rgb(116, 116, 247);
+  text-align: center;
+  font-weight: bold;
+  height: 50px;
+  min-width: 80px;
+  margin: 20px;
+  border-radius: 4px;
+  vertical-align: top;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  font-family: Maison Neue;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 1;
+  cursor: pointer;
+
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px; /* Modifica la distanza dal contenuto precedente se necessario */
+}
+
+
+
+
