--- a/VintedProject/src/app/Components/home-page/home-page.component.html
+++ b/VintedProject/src/app/Components/home-page/home-page.component.html
@@ -15,11 +15,11 @@
         <button class="showAll-button" [routerLink]="['/catalog']">Vedi tutti</button>
       </div>
       <div class="card-container">
-        <div class="card-row">
+        <div class="card-row" >
           <div *ngFor="let item of mostRequested.content" class="card-item">
             <app-product-card [item]="item"></app-product-card>
           </div>
-          <button type="button" class="btn btn-secondary" style="width: 300px; min-width: 200px"  [routerLink]="['/catalog']">Vedi tutti i prodotti</button>
+          <button type="button" class="btn btn-secondary" style="width: 300px; min-width: 200px;"  [routerLink]="['/catalog']">Vedi tutti i prodotti</button>
         </div>
       </div>
     </div>
