--- a/VintedProject/src/app/Components/insertion-page/insertion-page.component.html
+++ b/VintedProject/src/app/Components/insertion-page/insertion-page.component.html
@@ -50,7 +50,7 @@
             <app-product-card [item]="item"></app-product-card>
           </div>
         </div>
-        <button type="button" class="btn btn-secondary" style="width: 300px; min-width: 200px"  [routerLink]="['/catalog']">Vedi tutti i prodotti</button>
+        <button type="button" class="btn btn-secondary" style="width: 300px; min-width: 200px"  [routerLink]="['/profile', this.user?.id]">Vedi tutti i prodotti</button>
       </div>
     </div>
   </div>
