--- a/VintedProject/src/app/Components/main-nav/main-nav.component.html
+++ b/VintedProject/src/app/Components/main-nav/main-nav.component.html
@@ -56,7 +56,7 @@
     <button mat-button [routerLink]="['/category' , 'intrattenimento']">Intrattenimento</button>
     <button mat-button [routerLink]="['/category' , 'animali']">Animali</button>
     <button mat-button [routerLink]="['/informazioni']">Informazioni</button>
-    <button mat-button [routerLink]="['/cose_boooh']">La nostra piattaforma</button>
+    <button mat-button [routerLink]="['/cart']">Accesso rapido al carrello</button>
   </div>
 </div>
 
