--- a/VintedProject/src/app/Components/insertion-page/insertion-page.component.css
+++ b/VintedProject/src/app/Components/insertion-page/insertion-page.component.css
@@ -131,3 +131,8 @@ body {
 
   text-align: center; /* Centra il contenuto orizzontalmente */
 }
+
+.disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
