--- a/VintedProject/src/app/Components/main-nav/main-nav.component.html
+++ b/VintedProject/src/app/Components/main-nav/main-nav.component.html
@@ -38,7 +38,7 @@
       <span class="spacer"></span>
 
   <div style="display: flex; height: auto;"> <!--div bottoni iscrizione/accesso e inserisci inserzione-->
-    <button mat-raised-button style="background-color: lightblue;margin-top: 8px; margin-left: 10px; margin-right: 10px">Iscriviti/Accedi</button>
+    <button mat-raised-button style="background-color: lightblue;margin-top: 8px; margin-left: 10px; margin-right: 10px" [routerLink]="['/registration']">Iscriviti/Accedi</button>
     <span style="flex: 1 1 auto;"></span>
     <button mat-raised-button style="background-color: rgb(116, 116, 247); margin-top: 8px; margin-left: 10px; margin-right: 10px">Crea inserzione</button>
     <span style="flex: 1 1 auto;"></span>
