--- a/VintedProject/src/app/Components/registrazione/registrazione.component.html
+++ b/VintedProject/src/app/Components/registrazione/registrazione.component.html
@@ -1,20 +1,20 @@
 <div class="container">
   <div class="input-field">
     <div class="form-group">
-      <label for="id">ID:</label>
-      <input type="text" [(ngModel)]="id" id="id" name="id">
+      <label for="username">username:</label>
+      <input type="text" [(ngModel)]="newUser.username" id="username" name="username">
     </div>
 
     <div class="form-group">
-      <label for="nickName">Nickname:</label>
-      <input type="text" [(ngModel)]="nickName" id="nickName" name="nickName">
+      <label for="email">email:</label>
+      <input type="text" [(ngModel)]="newUser.email" id="email" name="email">
     </div>
 
     <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="text" [(ngModel)]="email" id="email" name="email">
+      <label for="password">password:</label>
+      <input type="text" [(ngModel)]="newUser.password" id="password" name="password">
     </div>
 
-    <button class="button"  style="background-color: darkred;" (click)="register()">Registrati</button>
+    <button class="button"  style="background-color: darkred;" (click)="signin()">Registrati</button>
   </div>
 </div>
