--- a/VintedProject/src/app/Components/registrazione/registrazione.component.css
+++ b/VintedProject/src/app/Components/registrazione/registrazione.component.css
@@ -1,9 +1,23 @@
+.container-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80%;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  width:80%;
+  height: auto;
+  border-right: 1px solid #ccc;
+  padding: 16px;
+}
+
+.container:last-child {
+  border-right: none;
 }
 
 .input-field {
