Bug fix registrazione

--- a/VintedProject/src/app/Components/registrazione/registrazione.component.html
+++ b/VintedProject/src/app/Components/registrazione/registrazione.component.html
@@ -19,7 +19,7 @@
     <div class="input-field">
       <div class="form-group">
         <label for="username">Username:</label>
-        <input type="text" [(ngModel)]="newUser.username" id="username" name="username">
+        <input type="text" [(ngModel)]="newUser.nickName" id="username" name="username">
       </div>
 
       <div class="form-group">
@@ -32,7 +32,7 @@
         <input type="text" [(ngModel)]="newUser.password" id="password" name="password">
       </div>
 
-      <button class="button" style="background-color: darkblue;" (click)="signIn()">Registrati </button>
+      <button class="button" style="background-color: darkblue;" (click)="signUp()">Registrati </button>
     </div>
   </div>
 </div>
