--- a/VintedProject/src/app/Components/home-page/home-page.component.html
+++ b/VintedProject/src/app/Components/home-page/home-page.component.html
@@ -3,7 +3,7 @@
   <div class="cardOver">
     <mat-card>
       <img mat-card-img src="assets/resources/CardOverlay.png">
-      <button mat-stroked-button style="background-color: lightblue;">CREA INSERZIONE</button>
+      <button mat-stroked-button style="background-color: lightblue; "  [routerLink]="['/newinsertion']" >CREA INSERZIONE</button>
     </mat-card>
   </div>
 </div>
