--- a/VintedProject/src/app/Components/Components/main-nav/main-nav.component.html
+++ b/VintedProject/src/app/Components/Components/main-nav/main-nav.component.html
@@ -36,7 +36,7 @@
       <span style="margin: 7%"></span>
 
       <span class="spacer"></span>
-
+  <span>{{ logStringResult }}</span>
   <div style="display: flex; height: auto;"> <!--div bottoni iscrizione/accesso e inserisci inserzione-->
     <button mat-raised-button style="background-color: lightblue;margin-top: 8px; margin-left: 10px; margin-right: 10px" [routerLink]="['/login']">Iscriviti/Accedi</button>
     <span style="flex: 1 1 auto;"></span>
