--- a/VintedProject/src/app/Components/Pages/User/login/login.component.html
+++ b/VintedProject/src/app/Components/Pages/User/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="input-field">
       <div class="form-group">
         <label for="loginuser">Username:</label>
-        <input type="email" [(ngModel)]="login.username" id="loginuser" name="loginuser">
+        <input type="email" [(ngModel)]="login.email" id="loginuser" name="loginuser">
       </div>
 
       <div class="form-group">
