--- a/VintedProject/src/app/Components/home-page/home-page.component.html
+++ b/VintedProject/src/app/Components/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <div class="image-container">
-  <img style="width: 100%; height: 550px;" src="assets/resources/imageProva.jpg">
+  <img  src="assets/resources/imageProva.jpg" alt="Immagine di prova">
   <div class="cardOver">
     <mat-card>
       <img mat-card-img src="assets/resources/CardOverlay.png">
